--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,13 @@ out/
 
 ### VS Code ###
 .vscode/
+
+
+**/out/**
+**/.idea/**
+*.idea
+**/build/**
+**/temp/**
+**/.gradle/
+**/.DS_Store
+**/.DS_Store/**
